<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CGOSDK</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="hint_username">Nickname</string>
    <string name="hint_password">Mật Khẩu</string>
    <string name="hint_email">Email</string>
    <string name="text_confirm">Xác nhận</string>
    <string name="text_cancel">Bỏ qua</string>
    <string name="text_login">Đăng Nhập</string>
    
    <string name="text_login_facebook">Đăng Nhập Bằng Facebook</string>
    <string name="text_login_google">Đăng Nhập Bằng Google+</string>
    <string name="text_register_short">Đăng Ký</string>
    <string name="text_or">hoặc</string>
    <string name="text_register">Đăng Ký Tài Khoản</string>
    <string name="text_register_small">Đăng ký tài khoản</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="text_login_small">Đăng nhập</string>
    <string name="text_register_uppercase">ĐĂNG KÝ TÀI KHOẢN</string>
    <string name="please_fill_up_info">Hãy nhập đầy đủ thông tin</string>
    <string name="please_check_internet_connection">Vui lòng kiểm tra kết nối mạng</string>
    <string name="please_try_again">Có lỗi xảy ra, vui lòng thử lại</string>
    <string name="welcome_back">Chào mừng bạn đã trở lại, </string>
    <string name="please_wait">Vui lòng chờ</string>
    <string name="select_ok_to_login">Hãy click OK để login Facebook</string>
    <string name="confirm_yes">Đồng ý</string>
    <string name="confirm_no">Không</string>
    <string name="pay_successful_you_received">Giao dịch thành công, bạn nhận được : </string>
    <string name="pay_failed">Giao dịch không thành công</string>
    <string name="load_failed">Lỗi tải dữ liệu</string>
    <string name="check_internet">Không có kết nối mạng. Vui lòng kiểm tra đường truyền</string>
    <string name="share_facebook_successful">Chia sẻ Facebook thành công</string>
    <string name="need_login_facebook">Bạn cần đăng nhập Facebook để thực hiện chức năng này</string>
    <string name="support">Hỗ trợ</string>
    <string name="close">Đóng</string>
    <string name="try_again">Thử lại</string>
    <string name="maximum_selected">Chọn tối đa 3 ảnh</string>
    <string name="please_select_image">Vui lòng chọn ảnh</string>
    
    <!-- data info -->
    <string name="sdk_version">1.6.1</string>
	<!-- GCM -->
	<string name="gcm_app_id">412236325032</string>    
  	<!-- Facebook -->
	<string name="facebook_app_id">420700558041384</string>
</resources>
