<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:minWidth="320dp"
    android:background="#f6f6f6" 
    >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFF"
        android:textColor="#72539b"
        android:text="@string/text_register_uppercase"
        android:textSize="18dp"
        android:gravity="center" 
        />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="7dp"
        android:drawableRight="@drawable/ic_username"
        android:hint="@string/hint_username"
        android:textColor="#72539b"
        android:id="@+id/et_username"
        />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="7dp"
        android:drawableRight="@drawable/ic_password"
        android:hint="@string/hint_password"
        android:textColor="#72539b"
        android:id="@+id/et_password"
        />
    
	<EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="7dp"
        android:drawableRight="@drawable/ic_email"
        android:hint="@string/hint_email"
        android:textColor="#72539b"
        android:id="@+id/et_email"
        />    
        
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:padding="7dp"
        android:background="#72539b"
        android:textColor="#FFF"
        android:text="@string/text_register_short"
        android:textSize="18dp"
        android:id="@+id/btn_register"
        />	

</LinearLayout>
