<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eaeaea"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eaeaea"
        android:orientation="vertical"
        android:gravity="center" 
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:src="@drawable/logo_big"
            />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_edittext"
            android:drawableRight="@drawable/ic_email"
            android:hint="@string/hint_email"
            android:padding="7dp"
            android:textColor="#72539b" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_edittext"
            android:drawableRight="@drawable/ic_username"
            android:hint="@string/hint_username"
            android:padding="7dp"
            android:textColor="#72539b"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_edittext"
            android:drawableRight="@drawable/ic_password"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="7dp"
            android:textColor="#72539b" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="#72539b"
            android:padding="7dp"
            android:text="@string/text_confirm"
            android:textColor="#FFF"
            android:textSize="18dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="#7295cc"
            android:padding="7dp"
            android:text="@string/text_cancel"
            android:textColor="#FFF"
            android:textSize="18dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="#72539b"
            android:padding="7dp"
            android:text="@string/text_login"
            android:textColor="#FFF"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="#72539b"
            android:padding="7dp"
            android:text="@string/text_register"
            android:textColor="#FFF"
            android:textSize="18dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_login_facebook"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="#3b5997"
            android:drawableLeft="@drawable/ic_facebook"
            android:padding="7dp"
            android:text="@string/text_login_facebook"
            android:textColor="#FFF"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_login_google"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="#dd4c39"
            android:padding="7dp"
            android:text="@string/text_login_google"
            android:textColor="#FFF"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2" >

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textColor="#7a7a7a"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_arrow_right"
                android:padding="5dp"
                android:text="@string/text_register_small"
                android:textColor="#7a7a7a"
                android:textSize="16dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/ic_arrow_left"
            android:drawablePadding="5dp"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/text_login_small"
            android:textColor="#7a7a7a"
            android:textSize="16dp"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>