<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f2f2"
    >
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#452a69"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_normal"
            android:layout_gravity="center" 
            />
    </FrameLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="7dp"
        android:drawableRight="@drawable/ic_username"
        android:hint="@string/hint_username"
        android:textColor="#72539b"
        />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="7dp"
        android:drawableRight="@drawable/ic_password"
        android:hint="@string/hint_password"
        android:textColor="#72539b"
        />    

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="7dp"
        android:background="#72539b"
        android:textColor="#FFF"
        android:text="@string/text_login"
        android:textSize="18dp"
        />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp" 
            android:background="#dfdfdf"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/tv_or"
            android:layout_marginRight="3dp"
            />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="#838383"
            android:text="@string/text_or" 
            android:id="@+id/tv_or"
            android:layout_centerInParent="true"
            />
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp" 
            android:background="#dfdfdf"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_or"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="3dp"
            />
    </RelativeLayout>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="7dp"
        android:background="#7295cc"
        android:textColor="#FFF"
        android:text="@string/text_register"
        android:textSize="18dp"
        android:id="@+id/btn_register"
        />    

</LinearLayout>
